Package_Tools/include-C/gst/123_in_arbeit/sdp/gstmikey.pp


function gst_mikey_message_new:PGstMIKEYMessage;cdecl;external;
function gst_mikey_message_new_from_data(data:Tgconstpointer; size:Tgsize; info:PGstMIKEYDecryptInfo; error:PPGError):PGstMIKEYMessage;cdecl;external;
function gst_mikey_message_new_from_bytes(bytes:PGBytes; info:PGstMIKEYDecryptInfo; error:PPGError):PGstMIKEYMessage;cdecl;external;
function gst_mikey_message_to_bytes(msg:PGstMIKEYMessage; info:PGstMIKEYEncryptInfo; error:PPGError):PGBytes;cdecl;external;
function gst_mikey_message_new_from_caps(caps:PGstCaps):PGstMIKEYMessage;cdecl;external;
(* Const before type ignored *)
function gst_mikey_message_to_caps(msg:PGstMIKEYMessage; caps:PGstCaps):Tgboolean;cdecl;external;
function gst_mikey_message_base64_encode(msg:PGstMIKEYMessage):Pgchar;cdecl;external;
{*
 * gst_mikey_message_ref:
 * @message: The message to refcount
 *
 * Increase the refcount of this message.
 *
 * Returns: (transfer full): @message (for convenience when doing assignments)
 *
 * Since: 1.4
  }
{ xxxxxxxxxx }
{static inline GstMIKEYMessage * }
{gst_mikey_message_ref (GstMIKEYMessage * message) }
{ }
{  return (GstMIKEYMessage *) gst_mini_object_ref (GST_MINI_OBJECT_CAST (message)); }
{ }
{*
 * gst_mikey_message_unref:
 * @message: (transfer full): the message to refcount
 *
 * Decrease the refcount of an message, freeing it if the refcount reaches 0.
 *
 * Since: 1.4
  }
{static inline void }
{gst_mikey_message_unref (GstMIKEYMessage * message) }
{ }
{  gst_mini_object_unref (GST_MINI_OBJECT_CAST (message)); }
{ }
{*
 * gst_mikey_message_copy:
 * @message: a #GstMIKEYMessage.
 *
 * Create a copy of the given message.
 *
 * Returns: (transfer full): a new copy of @message.
 *
 * Since: 1.4
  }
{static inline GstMIKEYMessage * }
{gst_mikey_message_copy (const GstMIKEYMessage * message) }
{ }
{  return (GstMIKEYMessage *) gst_mini_object_copy (GST_MINI_OBJECT_CONST_CAST (message)); }
{ }
function gst_mikey_message_set_info(msg:PGstMIKEYMessage; version:Tguint8; _type:TGstMIKEYType; V:Tgboolean; prf_func:TGstMIKEYPRFFunc; 
           CSB_id:Tguint32; map_type:TGstMIKEYMapType):Tgboolean;cdecl;external;
(* Const before type ignored *)
function gst_mikey_message_get_n_cs(msg:PGstMIKEYMessage):Tguint;cdecl;external;
{ SRTP crypto sessions  }
(* Const before type ignored *)
(* Const before type ignored *)
function gst_mikey_message_get_cs_srtp(msg:PGstMIKEYMessage; idx:Tguint):PGstMIKEYMapSRTP;cdecl;external;
(* Const before type ignored *)
function gst_mikey_message_insert_cs_srtp(msg:PGstMIKEYMessage; idx:Tgint; map:PGstMIKEYMapSRTP):Tgboolean;cdecl;external;
(* Const before type ignored *)
function gst_mikey_message_replace_cs_srtp(msg:PGstMIKEYMessage; idx:Tgint; map:PGstMIKEYMapSRTP):Tgboolean;cdecl;external;
function gst_mikey_message_remove_cs_srtp(msg:PGstMIKEYMessage; idx:Tgint):Tgboolean;cdecl;external;
function gst_mikey_message_add_cs_srtp(msg:PGstMIKEYMessage; policy:Tguint8; ssrc:Tguint32; roc:Tguint32):Tgboolean;cdecl;external;
{ adding/retrieving payloads  }
(* Const before type ignored *)
function gst_mikey_message_get_n_payloads(msg:PGstMIKEYMessage):Tguint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_mikey_message_get_payload(msg:PGstMIKEYMessage; idx:Tguint):PGstMIKEYPayload;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_mikey_message_find_payload(msg:PGstMIKEYMessage; _type:TGstMIKEYPayloadType; nth:Tguint):PGstMIKEYPayload;cdecl;external;
function gst_mikey_message_remove_payload(msg:PGstMIKEYMessage; idx:Tguint):Tgboolean;cdecl;external;
function gst_mikey_message_insert_payload(msg:PGstMIKEYMessage; idx:Tguint; payload:PGstMIKEYPayload):Tgboolean;cdecl;external;
function gst_mikey_message_add_payload(msg:PGstMIKEYMessage; payload:PGstMIKEYPayload):Tgboolean;cdecl;external;
function gst_mikey_message_replace_payload(msg:PGstMIKEYMessage; idx:Tguint; payload:PGstMIKEYPayload):Tgboolean;cdecl;external;
{ Key data transport payload (KEMAC)  }
{ Envelope data payload (PKE)  }
(* Const before type ignored *)
function gst_mikey_message_add_pke(msg:PGstMIKEYMessage; C:TGstMIKEYCacheType; data_len:Tguint16; data:Pguint8):Tgboolean;cdecl;external;
{ DH data payload (DH)  }
{ Signature payload (SIGN)  }
{ Timestamp payload (T)  }
(* Const before type ignored *)
function gst_mikey_message_add_t(msg:PGstMIKEYMessage; _type:TGstMIKEYTSType; ts_value:Pguint8):Tgboolean;cdecl;external;
function gst_mikey_message_add_t_now_ntp_utc(msg:PGstMIKEYMessage):Tgboolean;cdecl;external;
{ ID payload (ID)  }
{ Certificate Payload (CERT)  }
{ Cert hash payload (CHASH) }
{ Ver msg payload (V)  }
{ Security Policy payload (SP) }
{ RAND payload (RAND)  }
(* Const before type ignored *)
function gst_mikey_message_add_rand(msg:PGstMIKEYMessage; len:Tguint8; rand:Pguint8):Tgboolean;cdecl;external;
function gst_mikey_message_add_rand_len(msg:PGstMIKEYMessage; len:Tguint8):Tgboolean;cdecl;external;
{ Error payload (ERR)  }
{ Key data sub-payload  }
{ General Extension Payload  }
{$endif}
{ __GST_MIKEY_H__  }

implementation

{ was #define dname def_expr }
function GST_TYPE_MIKEY_MESSAGE : longint; { return type might be wrong }
  begin
    GST_TYPE_MIKEY_MESSAGE:=gst_mikey_message_get_type;
  end;

{ was #define dname def_expr }
function GST_TYPE_MIKEY_PAYLOAD : longint; { return type might be wrong }
  begin
    GST_TYPE_MIKEY_PAYLOAD:=gst_mikey_payload_get_type;
  end;


end.
